# alpha-wolf

./: .gitignore  README.md  config.json  main.py  requirements.txt
base/: settings.py
efficient_frontier/: apps.py  models.py  setup.cfg
efficient_frontier/migrations/: 0001_initial.py
efficient_frontier/services/: data_processing_client.py  market_data_client.py  yahoo_finance_client.py
efficient_frontier/src/efficient_frontier/: yahoo_finance_client.py
tool_kit/: database_api.py
