[metadata]
name = efficient_frontier
version = 0.0.1
author = Krzysztof Bienias
description = This project implements an asset management system based on the Markowitz Modern Portfolio Theory (MPT)
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True
python_requires = >=3.11